# parkwatch-bot

./: .env.example  .gitignore  IMPROVEMENTS.md  README.md  alembic.ini  config.py  parking_warden_bot_spec.md  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_admin_actions_table.py  003_phase9_user_management.py
bot/: __init__.py  database.py  health.py  logging_config.py  main.py  utils.py  zones.py
bot/handlers/: __init__.py  admin.py  report.py  user.py
bot/services/: __init__.py  moderation.py  notifications.py
bot/ui/: __init__.py  keyboards.py  messages.py
tests/: conftest.py  test_database.py  test_phase10.py  test_phase7.py  test_phase8.py  test_phase9.py  test_unit.py
