[project]
name = "parkwatch-bot"
version = "1.1.0"
description = "Crowdsourced parking warden alerts for Singapore drivers"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "python-telegram-bot[job-queue]>=21.0",
    "python-dotenv==1.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
sentry = [
    "sentry-sdk>=2.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bot*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["bot", "config"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "bot.main"
# Telegram Update attributes (callback_query, message, effective_user, user_data)
# are Optional in type stubs but guaranteed non-None by handler routing at runtime.
# InlineKeyboardButton args flagged due to dict value type inference from ZONES.
disable_error_code = ["union-attr", "arg-type", "index"]

[[tool.mypy.overrides]]
module = "bot.database"
# _conn and _pool are Optional but always set after connect(); safe at runtime
disable_error_code = ["attr-defined", "no-any-return"]
